[package]
name = "rust-kifuwarabe-uec11-client"
version = "0.1.0"
authors = ["むずでょ <muzudho1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.102"
serde_derive = "1.0.102"
toml = "0.5.5"
tokio = { version = "0.2.3", features = ["full"] }
futures = "0.3.1"
encoding_rs = "0.8.20"